--- a/lesson_25_practice/style.css
+++ b/lesson_25_practice/style.css
@@ -1,9 +1,36 @@
-body{
+body {
+
     background-color: #000000;
-    
 }
 
-.container{
+#btn_name {
+    background-color: white;
+    border-radius: 20px;
+    width: 200px;
+    height: 50px;
+    font-size: larger;
+    position: fixed;
+    right: 50%;
+    top: 0;
+}
+
+#btn_name:hover {
+    background-color: chartreuse;
+}
+
+.namep {
+    color: white !important;
+    font-size: x-large;
+}
+
+#name_o {
+    position: fixed !important;
+    right: 0;
+    top: 0;
+}
+
+
+.container {
     /* center all elements in container */
     width: 100%;
     height: 100vh;
@@ -13,14 +40,17 @@ body{
     align-items: center;
     flex-direction: column;
     position: absolute;
- 
+    background-image: url("https://i.pinimg.com/originals/1b/97/a3/1b97a36e5fa49dd1fbe6db2ad2de1ae5.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+
 }
 
 
-.table_div{
+.table_div {
     background-image: url(static/pjot.png);
     background-size: cover;
-    opacity: 0.8;  
+    opacity: 0.8;
     width: 500px;
     height: 500px;
     border-radius: 10px;
@@ -30,7 +60,7 @@ body{
     align-items: center;
 }
 
-.btn{
+.btn {
     width: 75px;
     height: 75px;
     margin: 2px;
@@ -40,12 +70,12 @@ body{
     box-shadow: inset 0 0 10px #cecbcb;
 }
 
-.btn:hover{
+.btn:hover {
     background-color: #ffffff55;
     color: #000000;
 }
 
-.side_manu{
+.side_manu {
     position: relative;
     border: #ffffff;
     width: 500px;
